Move JS library files to lib directory

--- a/web/index.html
+++ b/web/index.html
@@ -88,9 +88,9 @@
 	<pre id="log"></pre>
 	<div id="graph"></div>
 	<script src="/socket.io/socket.io.js"></script>
-	<script src="Three.js" type="text/javascript" charset="utf-8"></script>
-	<script src="RequestAnimationFrame.js" type="text/javascript" charset="utf-8"></script>
-	<script src="Stats.js" type="text/javascript" charset="utf-8"></script>
+	<script src="/lib/Three.js" type="text/javascript" charset="utf-8"></script>
+	<script src="/lib/RequestAnimationFrame.js" type="text/javascript" charset="utf-8"></script>
+	<script src="/lib/Stats.js" type="text/javascript" charset="utf-8"></script>
 	<script type="text/javascript" src="http://mbostock.github.com/d3/d3.js"></script>
 	<script>
 		/**
