--- a/web/index.html
+++ b/web/index.html
@@ -100,7 +100,8 @@
 		 **/
 	
 		var socket = io.connect('/gio');
-		var gioData = { x: 1, y: 1, z: 1 };
+		var gioData = { x: 0, y: 0, z: 0 };
+		var gioSmooth = { x: 0, y: 0, z: 0 };
 		var gioTS = new Date().getTime();
 
 		socket.on('gio', function (data) {
@@ -364,20 +365,20 @@
 				axes.y.scale.y = Math.max(axes.y.scale.y-0.01,0);
 				axes.z.scale.z = Math.max(axes.z.scale.z-0.01,0);
 			} else {
-				axes.x.position.x = gioData.x / ONE_G * (ARROW_LENGTH/2 - ARROW_THICKNESS / 2);
-				axes.xArrow.visible = (Math.abs(gioData.x/ONE_G) > 0.1);
-				axes.xArrow.position.x = axes.x.position.x + ((gioData.x < 0)?-1:1) * (ARROW_LENGTH/2 + CONE_HEIGHT/2);
-				axes.xArrow.rotation.z = ((gioData.x < 0)?1:-1) * Math.PI / 2;
+				axes.x.position.x = gioSmooth.x/ONE_G * (ARROW_LENGTH/2 - ARROW_THICKNESS / 2);
+				axes.xArrow.visible = (Math.abs(gioSmooth.x/ONE_G) > 0.1);
+				axes.xArrow.position.x = axes.x.position.x + ((gioSmooth.x < 0)?-1:1) * (ARROW_LENGTH/2 + CONE_HEIGHT/2);
+				axes.xArrow.rotation.z = ((gioSmooth.x < 0)?1:-1) * Math.PI / 2;
 				
-				axes.y.position.z = gioData.y / ONE_G * (ARROW_LENGTH/2 - ARROW_THICKNESS / 2);
-				axes.yArrow.visible = (Math.abs(gioData.y/ONE_G) > 0.1);
-				axes.yArrow.position.z = axes.y.position.z + ((gioData.y < 0)?-1:1) * (ARROW_LENGTH/2 + CONE_HEIGHT/2);
-				axes.yArrow.rotation.x = ((gioData.y < 0)?-1:1) * Math.PI / 2;
+				axes.y.position.z = gioSmooth.y / ONE_G * (ARROW_LENGTH/2 - ARROW_THICKNESS / 2);
+				axes.yArrow.visible = (Math.abs(gioSmooth.y/ONE_G) > 0.1);
+				axes.yArrow.position.z = axes.y.position.z + ((gioSmooth.y < 0)?-1:1) * (ARROW_LENGTH/2 + CONE_HEIGHT/2);
+				axes.yArrow.rotation.x = ((gioSmooth.y < 0)?-1:1) * Math.PI / 2;
 
-				axes.z.position.y = gioData.z / ONE_G * (ARROW_LENGTH/2 - ARROW_THICKNESS / 2);
-				axes.zArrow.visible = (Math.abs(gioData.z/ONE_G) > 0.1);
-				axes.zArrow.position.y = axes.z.position.y + ((gioData.z < 0)?-1:1) * (ARROW_LENGTH/2 + CONE_HEIGHT/2);
-				axes.zArrow.rotation.z = ((gioData.z < 0)?-1:-2) * Math.PI;
+				axes.z.position.y = gioSmooth.z / ONE_G * (ARROW_LENGTH/2 - ARROW_THICKNESS / 2);
+				axes.zArrow.visible = (Math.abs(gioSmooth.z/ONE_G) > 0.1);
+				axes.zArrow.position.y = axes.z.position.y + ((gioSmooth.z < 0)?-1:1) * (ARROW_LENGTH/2 + CONE_HEIGHT/2);
+				axes.zArrow.rotation.z = ((gioSmooth.z < 0)?-1:-2) * Math.PI;
 			}
 			
 			r+=0.01
@@ -402,17 +403,38 @@
 		var yLine = new TimeSeries();
 		var zLine = new TimeSeries();
 
-		smoothie.addTimeSeries(xLine, { strokeStyle: '#CE2626', lineWidth: 3 });
-		smoothie.addTimeSeries(yLine, { strokeStyle: '#51B863', lineWidth: 3 });
-		smoothie.addTimeSeries(zLine, { strokeStyle: '#0936AC', lineWidth: 3 });
+		smoothie.addTimeSeries(xLine, { strokeStyle: '#CE2626', lineWidth: 1 });
+		smoothie.addTimeSeries(yLine, { strokeStyle: '#51B863', lineWidth: 1 });
+		smoothie.addTimeSeries(zLine, { strokeStyle: '#0936AC', lineWidth: 1 });
+		
+		var xSmooth = new TimeSeries();
+		var ySmooth = new TimeSeries();
+		var zSmooth = new TimeSeries();
+
+		smoothie.addTimeSeries(xSmooth, { strokeStyle: '#801818', lineWidth: 2 });
+		smoothie.addTimeSeries(ySmooth, { strokeStyle: '#367C42', lineWidth: 2 });
+		smoothie.addTimeSeries(zSmooth, { strokeStyle: '#06216A', lineWidth: 2 });
+
+		function smooth(data, filterValue, smoothValue) {
+			return (data*(1-filterValue) + smoothValue*filterValue);
+		}
 		
 		function updateLines() {
+			var filterValue = 0.9;
+			gioSmooth.x = smooth(gioData.x, filterValue, gioSmooth.x);
+			gioSmooth.y = smooth(gioData.y, filterValue, gioSmooth.y);
+			gioSmooth.z = smooth(gioData.z, filterValue, gioSmooth.z);
+			
+			xSmooth.append(new Date().getTime(), gioSmooth.x/ONE_G);
+			ySmooth.append(new Date().getTime(), gioSmooth.y/ONE_G);
+			zSmooth.append(new Date().getTime(), gioSmooth.z/ONE_G);
+			
 			xLine.append(new Date().getTime(), gioData.x/ONE_G);
 			yLine.append(new Date().getTime(), gioData.y/ONE_G);
 			zLine.append(new Date().getTime(), gioData.z/ONE_G);
 		}
-		setInterval(updateLines, 250);
-		smoothie.streamTo(document.getElementById('chart'), 250);
+		setInterval(updateLines, 50);
+		smoothie.streamTo(document.getElementById('chart'), 50);
 
 		function onResize() {
 			document.getElementById('chart').width = window.innerWidth;
