--- a/web/index.html
+++ b/web/index.html
@@ -154,6 +154,7 @@
 		var ONE_G = 16384; // One G force
 		
 		var enable3D = true; // TODO: toggle between 3d modes
+		var enableGraph = true;
 
 		if(enable3D) {
 			document.addEventListener( 'mousemove', onDocumentMouseMove, false );
@@ -199,13 +200,12 @@
 			scene.add(spotLight)
 
 			// light representation
-
 			sphere = new THREE.SphereGeometry( 100, 16, 8, 1 );
 			lightMesh = new THREE.Mesh( sphere, new THREE.MeshBasicMaterial( { color: 0xffaa00 } ) );
 			lightMesh.scale.set( 0.05, 0.05, 0.05 );
 			lightMesh.position = pointLight.position;
 			scene.add( lightMesh );
-			
+
 			try {
 
 				webglRenderer = new THREE.WebGLRenderer( { antialias: true, clearAlpha: 1 } );
@@ -213,14 +213,6 @@
 				webglRenderer.domElement.style.position = "relative";
 				webglRenderer.setClearColorHex(0xEEEEEE, 1.0);
 				
-				// Shadows
-				webglRenderer.shadowMapBias = 0.0039;
-				webglRenderer.shadowMapDarkness = 0.5;
-				webglRenderer.shadowMapWidth = SHADOW_MAP_WIDTH;
-				webglRenderer.shadowMapHeight = SHADOW_MAP_HEIGHT;
-				
-				webglRenderer.shadowMapEnabled = true;
-				webglRenderer.shadowMapSoft = true;
 				container.appendChild( webglRenderer.domElement );
 				has_gl = 1;
 
@@ -393,6 +385,7 @@
 	</script>
 	
 	<<script type="text/javascript" charset="utf-8">
+	if(enableGraph) {
 		var smoothie = new SmoothieChart({
 			minValue: -1.5,
 			maxValue: 1.5,
@@ -442,6 +435,7 @@
 		
 		onResize();
 		window.addEventListener('resize', onResize, false);
+	}
 	</script>>
 </body>
 </html>
