cleaning up variables

--- a/web/index.html
+++ b/web/index.html
@@ -124,15 +124,9 @@
 
 		var container, stats;
 
-		var camera, scene, canvasRenderer, webglRenderer;
-
-		var loader;
-
-		var mesh, zmesh, lightMesh;
-		
-		var axes;
-
-		var directionalLight, pointLight, spotLight;
+		var camera, scene, webglRenderer, 
+			lightMesh, directionalLight, pointLight, spotLight,
+			axes;
 
 		var mouseX = 0, mouseY = 0;
 
