Add in Gio Bot placeholder!

--- a/web/index.html
+++ b/web/index.html
@@ -103,9 +103,17 @@
 		.labelx { color: rgba(206,  38,  38, 0.1); }
 		.labely { color: rgba( 81, 184,  99, 0.1); }
 		.labelz { color: rgba(  9,  54, 172, 0.1); }
+		#logo {
+			position: absolute;
+			width: 216px;
+			height: 216px;
+			background: url('giobot.png');
+			bottom: 0px;
+		}
 	</style>
 </head>
 <body>
+	<div id="logo"></div>
 	<pre id="log"></pre>
 	<div id="graph">
 		<div class="graphwrapper"><canvas class="graphs" id="chartx" width="200" height="200"></canvas><div class="axislabel labelx">X</div></div>
